// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. primary tile 1`] = `
<View>
  <View>
    <View>
      <Text>
        ROYALS
      </Text>
    </View>
    <View>
      <View>
        <View>
          <View>
            <Svg
              height={8}
              role="img"
              title="Diamond Icon"
              viewBox="0 0 20 20"
              width={8}
            >
              <G
                fill="#E34605"
              >
                <Path
                  d="M 0,10 10,20 20,10 10,0 Z"
                />
              </G>
            </Svg>
          </View>
          <Text
            accessibilityLabel="new Flag"
            testID="flag-new"
          >
            new
          </Text>
        </View>
      </View>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </Text>
  </View>
  <View>
    <Image
      aspectRatio={1.7777777777777777}
      uri="https://img/someImage"
    />
  </View>
</View>
`;

exports[`2. primary tiles without image 1`] = `
<View>
  <View>
    <View>
      <Text>
        ROYALS
      </Text>
    </View>
    <View>
      <View>
        <View>
          <View>
            <Svg
              height={8}
              role="img"
              title="Diamond Icon"
              viewBox="0 0 20 20"
              width={8}
            >
              <G
                fill="#E34605"
              >
                <Path
                  d="M 0,10 10,20 20,10 10,0 Z"
                />
              </G>
            </Svg>
          </View>
          <Text
            accessibilityLabel="new Flag"
            testID="flag-new"
          >
            new
          </Text>
        </View>
      </View>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </Text>
  </View>
  <Text>
    <Text>
      
      The 
      <Text>
        Duke of Edinburgh
      </Text>
       could be charged with driving without due care and attention after his car accident yesterday
      ...
    </Text>
  </Text>
</View>
`;
